WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
303417
Downcast crash when grid item requests fullscreen with container-type parent
https://bugs.webkit.org/show_bug.cgi?id=303417
Summary
Downcast crash when grid item requests fullscreen with container-type parent
Ruthvik Konda
Reported
2025-12-02 13:16:42 PST
Downcast crash when grid item requests fullscreen with container-type parent
Attachments
Add attachment
proposed patch, testcase, etc.
Ruthvik Konda
Comment 1
2025-12-02 13:16:56 PST
rdar://163028025
Ruthvik Konda
Comment 2
2025-12-02 13:35:17 PST
Pull request:
https://github.com/WebKit/WebKit/pull/54719
EWS
Comment 3
2025-12-03 12:26:32 PST
Committed
303857@main
(60c138fa85ea): <
https://commits.webkit.org/303857@main
> Reviewed commits have been landed. Closing PR #54719 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug